[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["Leo Kukharau <kuhorev.leonid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "^2.1.1"
matplotlib = "^3.3.0"
pandas = "^1.0.5"
jupyterlab = "^2.2.0"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
